fix DT-2328, Large product thumbnails get cut off

--- a/less/plugin-ecommerce.less
+++ b/less/plugin-ecommerce.less
@@ -48,7 +48,14 @@
     }
 }
 
-.product-gallery { text-align: center; }
+.product-gallery {
+    text-align: center;
+    .image--thumb {
+        max-height: 80px;
+        @media @mobile {
+            max-height: 60px;
+        }
+}
 
 // Product Content
 // ---------------
